--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.android.support:animated-vector-drawable:25.1.1'
+    compile 'com.android.support:palette-v7:25.1.1'
 }
